cfn_benchmark/cfn_templates/kimjuls__sam-templates-ecs-private/templates/elb.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  VpcId:
    Type: String
  PublicSubnetIds:
    Type: List<AWS::EC2::Subnet::Id>

Resources:
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 3000
      Protocol: HTTP
      VpcId: !Ref VpcId
      HealthCheckEnabled: true
      HealthCheckPath: /health
      HealthCheckPort: 3000
      TargetType: ip

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets: !Ref PublicSubnetIds
      SecurityGroups:
        - !Ref SecurityGroupLoadBalancer
      Scheme: internet-facing

  ListenerHTTP:
    DependsOn:
      - LoadBalancer
      - TargetGroup
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            Protocol: HTTPS
            Port: '443'
            StatusCode: HTTP_301
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP

  ListenerHTTPS:
    DependsOn:
      - LoadBalancer
      - TargetGroup
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref Certificate

  Certificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: example.com
      ValidationMethod: DNS

  SecurityGroupLoadBalancer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group For Public Subnet
      VpcId: !Ref VpcId

  LoadBalancerIngressFromInternetHttp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from the internet
      GroupId: !Ref SecurityGroupLoadBalancer
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0

  LoadBalancerIngressFromInternetHttps:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from the internet
      GroupId: !Ref SecurityGroupLoadBalancer
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0

Outputs:
  TargetGroupArn:
    Value: !Ref TargetGroup
  SecurityGroupLoadBalancer:
    Value: !Ref SecurityGroupLoadBalancer
